Added docker-compose and moved the load_secrets to the top of the main file. Now, it is working via ECS

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,8 +4,9 @@
 Dockerfile
 .gitignore
 .dockerignore
-.streamlit/secrets.toml
+.streamlit
 .env
 procedures_processing/
 procedures_data/
 **/__pycache__/
+deploy.sh
